[package]
name = "tokio-immediate-example-egui"
description = "egui + tokio-immediate usage example"
publish = false

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
# Dummy feature to make `rust-analyzer` happy.
# See https://github.com/rust-lang/rust-analyzer/issues/18114
sync = []

[dependencies]
futures-util = { workspace = true }
tokio-util = { workspace = true }

[dependencies.eframe]
workspace = true
features = [
    "default_fonts",
    "wayland",
    "x11",

    # Multi-window demo has problems when running with glow on Linux/Wayland and one of the
    # windows is hidden: other window may appear frozen and unresponsive. It looks like
    # the wgpu backend does not have this problem. Probably related issues:
    #   * https://github.com/emilk/egui/issues/5136
    #   * https://github.com/emilk/egui/issues/5112
    "wgpu",
]

[dependencies.egui]
workspace = true
features = [
    "default_fonts",
]

[dependencies.reqwest]
workspace = true
features = [
    "rustls",
    "stream",
]

[dependencies.tokio]
workspace = true
features = [
    "macros",
    "rt-multi-thread",
    "time",
]

[dependencies.tokio-immediate-egui]
workspace = true
features = [
    "sync",
]

[dependencies.wgpu]
workspace = true
features = [
    "dx12",
    "metal",
    "vulkan",
    "gles",
    "static-dxc",
    "std",
    "parking_lot",
]

[dependencies.winit]
workspace = true
features = [
    "x11",
    "wayland",
    "wayland-dlopen",
    "wayland-csd-adwaita",
]
