[package]
name = "tokio-immediate-example-imgui-minimal"
description = "dear-imgui-rs + tokio-immediate minimal usage example"
publish = false

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
# Dummy feature to make `rust-analyzer` happy.
sync = []

[dependencies]
dear-app = { workspace = true }
dear-imgui-rs = { workspace = true }
tokio-immediate = { workspace = true }
winit = { workspace = true }

[dependencies.tokio]
workspace = true
features = [
    "net",
    "rt-multi-thread",
    "time",
]
