[package]
name = "tokio-immediate-egui"
description = "Asynchronous glue for your egui application"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
default = []

## Enable viewport-aware wrappers around [`tokio::sync`] channels and a [`trigger`] notification channel.
sync = ["tokio-immediate/sync"]

# Describe feature flags in generated doc.
document-features = ["dep:document-features"]

[dependencies.document-features]
workspace = true
optional = true
features = [
    "default",
]

[dependencies]
egui = { workspace = true }
tokio-immediate = { workspace = true }
