[package]
name = "tokio-immediate"
description = "Asynchronous glue for your immediate mode UI"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []

## Enable viewport-aware wrappers around [`tokio::sync`] channels and a [`trigger`] notification channel.
sync = ["tokio/sync"]

# Describe feature flags in generated doc.
document-features = ["dep:document-features"]

[dependencies.document-features]
workspace = true
optional = true
features = [
    "default",
]

[dependencies.tokio]
workspace = true
features = [
    "rt",
]
